# cynnycty

./: .gitignore  README.md  docker-compose.yml
be/: .env.example  Cargo.toml
be/src/: app_state.rs  main.rs
be/src/auth/: clerk.rs  middleware.rs  mod.rs  user.rs
be/src/db/: connection.rs  mod.rs  schema.rs  schema.sql
be/src/routes/: database.rs  health.rs  mod.rs  profiles.rs
fe/: package.json
fe/src/lib/: colors.ts  index.ts
fe/src/lib/components/common/: Button.svelte  index.ts
fe/src/routes/: +layout.svelte  +page.svelte
fe/src/routes/dashboard/: +page.svelte
fe/src/routes/sign-in/: +page.svelte
fe/src/routes/sign-up/: +page.svelte
