[package]
name = "cynnycty-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arcadedb-rs = "0.0.4"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
base64 = "0.22"
